--- a/ko/404.html
+++ b/ko/404.html
@@ -9,7 +9,7 @@
 <meta property="og:locale" content="en_US" />
 <meta name="description" content="Write an awesome description for your new site here. You can edit this line in _config.yml. It will appear in your document head meta (for Google search results) and in your feed.xml site description." />
 <meta property="og:description" content="Write an awesome description for your new site here. You can edit this line in _config.yml. It will appear in your document head meta (for Google search results) and in your feed.xml site description." />
-<link rel="canonical" href="/jekyll-github-actions/404.html" />
+<link rel="canonical" href="/jekyll-github-actions/ko/404.html" />
 <meta property="og:url" content="/jekyll-github-actions/404.html" />
 <meta property="og:site_name" content="Your awesome title" />
 <meta property="og:type" content="website" />
@@ -18,10 +18,10 @@
 <script type="application/ld+json">
 {"@context":"https://schema.org","@type":"WebPage","description":"Write an awesome description for your new site here. You can edit this line in _config.yml. It will appear in your document head meta (for Google search results) and in your feed.xml site description.","headline":"Your awesome title","url":"/jekyll-github-actions/404.html"}</script>
 <!-- End Jekyll SEO tag -->
-<link rel="stylesheet" href="/jekyll-github-actions/assets/main.css"><link type="application/atom+xml" rel="alternate" href="/jekyll-github-actions/feed.xml" title="Your awesome title" /></head>
+<link rel="stylesheet" href="/jekyll-github-actions/assets/main.css"><link type="application/atom+xml" rel="alternate" href="/jekyll-github-actions/ko/feed.xml" title="Your awesome title" /></head>
 <body><header class="site-header" role="banner">
 
-  <div class="wrapper"><a class="site-title" rel="author" href="/jekyll-github-actions/">Your awesome title</a><nav class="site-nav">
+  <div class="wrapper"><a class="site-title" rel="author" href="/jekyll-github-actions/ko/">Your awesome title</a><nav class="site-nav">
         <input type="checkbox" id="nav-trigger" class="nav-trigger" />
         <label for="nav-trigger">
           <span class="menu-icon">
@@ -31,7 +31,7 @@
           </span>
         </label>
 
-        <div class="trigger"><a class="page-link" href="/jekyll-github-actions/about/">About</a></div>
+        <div class="trigger"><a class="page-link" href="/jekyll-github-actions/ko/about/">About</a></div>
       </nav></div>
 </header>
 <main class="page-content" aria-label="Content">
@@ -59,7 +59,7 @@
 
       </div>
     </main><footer class="site-footer h-card">
-  <data class="u-url" href="/jekyll-github-actions/"></data>
+  <data class="u-url" href="/jekyll-github-actions/ko/"></data>
 
   <div class="wrapper">
 
